2006-06-23  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/enums.h: fix stupid error from last commit

2006-06-23  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/enums.h: add new FORMAT_RGB16_565 format

2006-06-12  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* configure.in: bump required cairo version to >= 1.1.7
	* cairomm/surface.cc, cairomm/surface.h: update to new cairo API
	cairo_surface_set_fallback_resolution

2006-05-10  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/reference/cairomm.css: minor documentation stylesheet fix

2006-05-08  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/context.h:
	* cairomm/path.h: added some preliminary documentation explaining that the
	caller is responsible for freeing Path objects returned from
	Context::copy_path() and Context::copy_path_flat().

2006-05-08  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/cairomm.h: Add doxygen API introduction test here.
	* docs/reference/Doxyfile.in: 
	* docs/reference/Makefile.am:
	* docs/reference/cairomm-header.html:
	* docs/reference/cairomm.css:
	* docs/reference/introduction.h: fix up some documentation presentation
	issues that turned up with newer versions of doxygen.

2006-05-08  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* configure.in: remove check for perl since we're not using any of the
	gmmproc stuff for cairomm
	* docs/reference/Makefile.am: add documentation dependency on all of the
	headers in the cairomm/ directory so that if a header changes the
	documentation will be rebuilt.

2006-04-20  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/context.cc:
	* cairomm/context.h: mask(pattern) and mask(surface): Make the parameter 
	const, because I am fairly sure that the C function does not change it.

2006-04-06  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* Makefile.am: Add a brief description of cairomm to the release
	announcement template
